<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <Button
            android:id="@+id/btnGet"
            android:text="@string/btn_get"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/btnGetWithAlias"
            android:text="@string/btn_get_with_alias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/btnPost"
            android:text="@string/btn_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/btnPut"
            android:text="@string/btn_put"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/btnDelete"
            android:text="@string/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/textResponse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
</LinearLayout>